--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="coklat">#8D230F</color>
+    <color name="biru">#1E434C</color>
+    <color name="orange">#9B4F0F</color>
+    <color name="kuning">#C99E10</color>
 </resources>
